[package]
name = "rtools"
version = "1.0.3"
edition = "2021"
description = "wasm tools"
repository = "https://github.com/qmaru/rtools"
license = "GPL-3.0-or-later"

[dependencies]
wasm-bindgen = "0.2.89"
digest = { version = "0.10.7", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
blake3 = { version = "1.5.0", default-features = false }
murmur3 = { version = "0.5.2", default-features = false }
sm3 = { version = "0.4.2", default-features = false }
zxcvbn = { version = "2.2.2", default-features = false }
pinyin = { version = "0.10", default-features = false, features = ["plain"] }
uuid = { version = "1.6.1", default-features = false, features = [
    "v4",
    "js",
    "fast-rng",
    "macro-diagnostics",
] }
base64_light = { version = "0.1.5", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
