[package]
name = "rtools"
version = "1.1.6"
edition = "2021"
description = "wasm tools"
repository = "https://github.com/qmaru/rtools"
license = "GPL-3.0-or-later"

[dependencies]
wasm-bindgen = "0.2.92"
digest = { version = "0.10.7", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
blake3 = { version = "1.5.1", default-features = false }
murmur3 = { version = "0.5.2", default-features = false }
sm3 = { version = "0.4.2", default-features = false }
pinyin = { version = "0.10", default-features = false, features = [
    "plain",
    "with_tone",
] }
uuid = { version = "1.9.1", default-features = false, features = ["v4", "js"] }
nanoid = { version = "0.4.0", default-features = false }
sqids = { version = "0.4.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
otpauth = "0.5.1"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
data-encoding = "2.9.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
